--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+
+    <color name="colorPrimary">#fcfcfc</color>
+    <color name="colorPrimaryDark">#3CB371</color>
+    <color name="colorAccent">#109972</color>
+
+    <!-- 자주 사용하는 색상 모음 -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_for_menu_text">#4a4a4a</color>
+
+    <!-- WALKU 앱 베이스 색상 (그린조아!)-->
+    <color name="main_green_base">#72CC82</color>
+    <color name="main_green">#3CB371</color>
+    <color name="main_green_accent">#109972</color>
+
 </resources>
