--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,5 +1,10 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="95dp"
+    android:height="82dp"
+    android:viewportWidth="95"
+    android:viewportHeight="82">
+  <path
+      android:pathData="M26.5,20.3c-14.8,10.8 -21.1,16 -21.3,17.5 -0.4,2.6 2.4,3 5.4,0.7 1,-0.8 2.2,-1.5 2.7,-1.5 0.4,-0 0.7,8.2 0.7,18.3 0,12.9 0.4,18.7 1.2,19.5 1.7,1.7 23.9,1.7 25.6,-0 0.8,-0.8 1.2,-5.4 1.2,-14l0,-12.8 6,-0 6,-0 0,12.9c0,9.8 0.3,13.1 1.4,14 0.9,0.8 5.5,1.1 13.7,0.9l12.4,-0.3 0.3,-19.8 0.2,-19.8 2.7,2c3.5,2.9 6.5,2.8 6.1,-0.1 -0.2,-1.6 -6.4,-6.6 -21.3,-17.5 -11.5,-8.4 -21.2,-15.3 -21.5,-15.3 -0.3,-0 -9.9,6.9 -21.5,15.3zM62.8,22l13.1,9.5 0.1,19.2 0,19.3 -8,-0 -8,-0 0,-12.8c0,-8.6 -0.4,-13.2 -1.2,-14 -1.6,-1.6 -20,-1.6 -21.6,-0 -0.8,0.8 -1.2,5.4 -1.2,14l0,12.8 -8,-0 -8,-0 0.2,-19.2 0.3,-19.2 13.4,-9.8c7.4,-5.5 13.9,-9.8 14.6,-9.6 0.6,0.2 7,4.6 14.3,9.8z"
+      android:fillColor="#000000"
+      android:strokeColor="#00000000"/>
 </vector>
