--- a/app/src/main/res/menu/menu_main_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_main_bottom_nav.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_main_btm_nav_challenge"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_challenge"
         app:showAsAction="always"
         android:enabled="true"
         android:title="챌린지" />
@@ -19,14 +19,14 @@
 
     <item
         android:id="@+id/menu_main_btm_nav_analysis"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_analysis"
         app:showAsAction="always"
         android:enabled="true"
         android:title="분석" />
 
     <item
         android:id="@+id/menu_main_btm_nav_settings"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/ic_settings"
         app:showAsAction="always"
         android:enabled="true"
         android:title="설정" />
