--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,57 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="?attr/actionBarSize" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/main_btm_nav"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/layout_bottom_first"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:itemBackground="@color/white"
-        app:itemIconTint="@drawable/main_btm_nav_item_color"
-        app:itemTextColor="@drawable/main_btm_nav_item_color"
-        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu_main_bottom_nav" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <com.konkuk.walku.util.CustomBottomNavigationView
+            android:id="@+id/main_btm_nav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:itemBackground="@color/white"
+            app:itemIconTint="@drawable/main_btm_nav_item_color"
+            app:itemTextColor="@drawable/main_btm_nav_item_color"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/menu_main_bottom_nav" />
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_bottom_second"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/main_btm_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/main_fab_background"
+            android:backgroundTint="@color/white"
+            android:clickable="true"
+            android:elevation="3dp"
+            android:focusable="true"
+            android:src="@drawable/ic_main"
+            android:translationZ="2dp"
+            app:backgroundTint="#f3f3f3"
+            app:borderWidth="1dp"
+            app:elevation="0dp"
+            app:maxImageSize="40dp"
+            app:rippleColor="@null" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
