--- a/app/src/main/res/menu/menu_main_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_main_bottom_nav.xml
@@ -2,12 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/menu_main_btm_nav_challenge"
-        android:icon="@drawable/ic_challenge"
-        app:showAsAction="always"
-        android:enabled="true"
-        android:title="챌린지" />
 
     <item
         android:id="@+id/menu_main_btm_nav_home"
@@ -23,6 +17,21 @@
         app:showAsAction="always"
         android:enabled="true"
         android:title="분석" />
+
+    <item
+        android:id="@+id/action_empty"
+        android:title=""
+        app:showAsAction="never"
+        android:enabled="false"
+        android:checkable="false"/>
+
+    <item
+        android:id="@+id/menu_main_btm_nav_challenge"
+        android:icon="@drawable/ic_challenge"
+        app:showAsAction="always"
+        android:enabled="true"
+        android:title="챌린지" />
+
 
     <item
         android:id="@+id/menu_main_btm_nav_settings"
