--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="main_green_base">#72CC82</color>
     <color name="main_green">#3CB371</color>
     <color name="main_green_accent">#109972</color>
+    <color name="main_green_background">#54e48f</color>
 
 </resources>
