--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="main_green_accent">#109972</color>
     <color name="main_green_background">#54e48f</color>
 
-
+    <!-- 기타 -->
+    <color name="kakao_background">#FDE101</color>
+    <color name="kakao_text">#3C1E1C</color>
 
 </resources>
