feat: 하단 메뉴 아이콘 변경, 셀렉터 설정 (선택/미선택 아이콘 구분)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,8 @@
             android:clickable="true"
             android:elevation="3dp"
             android:focusable="true"
-            android:src="@drawable/ic_main"
+            android:src="@drawable/ic_walk_selected"
+            android:tint="@color/main_green_base"
             android:translationZ="2dp"
             app:backgroundTint="#f3f3f3"
             app:borderWidth="1dp"
