--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -48,5 +48,12 @@
         <item name="android:textSize">11sp</item>
     </style>
 
+    <!-- 탭 레이아웃 글자 속성 -->
+    <style name="TabTextStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 </resources>
