--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/roboto_bold"
-                android:text="서울특별시 광진구"
+                tools:text="서울특별시 광진구"
                 android:textColor="@color/main_green_base"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_bold"
-                android:text="30°C"
+                android:text="-°C"
                 android:textColor="@color/main_green_accent"
                 android:textSize="35sp"
                 android:layout_marginEnd="15dp"
