fix: WeatherFragment getAddress 함수 수정

--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -21,43 +21,43 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/roboto_bold"
-                tools:text="서울특별시 광진구"
                 android:textColor="@color/main_green_base"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="서울특별시 광진구" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fragment_weather_current_weather_state_anim_view"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/sunny_anim"
+                tools:src="@drawable/sunny_anim"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/fragment_weather_address_text_view" />
 
 
             <TextView
                 android:id="@+id/fragment_weather_current_weather_state_text_view"
-                app:layout_constraintStart_toStartOf="@id/fragment_weather_current_weather_temperature_text_view"
-                app:layout_constraintBottom_toTopOf="@id/fragment_weather_current_weather_temperature_text_view"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="13sp"
-                android:textColor="@color/medium_gray"
-                android:text="맑음"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_regular"
+                tools:text="맑음"
+                android:textColor="@color/medium_gray"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toTopOf="@id/fragment_weather_current_weather_temperature_text_view"
+                app:layout_constraintStart_toStartOf="@id/fragment_weather_current_weather_temperature_text_view" />
 
             <TextView
                 android:id="@+id/fragment_weather_current_weather_temperature_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
                 android:fontFamily="@font/roboto_bold"
-                android:text="-°C"
+                tools:text="25°C"
                 android:textColor="@color/main_green_accent"
                 android:textSize="35sp"
-                android:layout_marginEnd="15dp"
                 app:layout_constraintBottom_toBottomOf="@id/fragment_weather_current_weather_state_anim_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/fragment_weather_current_weather_state_anim_view" />
@@ -65,6 +65,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
