--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -80,10 +80,12 @@
 
             <TextView
                 android:id="@+id/fragment_weather_current_possibility_rain_value_text_view"
-                android:layout_width="wrap_content"
+                android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
+                android:ellipsize="end"
                 android:fontFamily="@font/roboto_regular"
+                android:maxLines="1"
                 android:textColor="@color/dark_gray"
                 android:textSize="13sp"
                 app:layout_constraintBottom_toBottomOf="@id/fragment_weather_current_possibility_rain_text_view"
@@ -194,12 +196,12 @@
                 android:id="@+id/fragment_weather_humidity_progress_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="50dp"
-                android:layout_marginEnd="5dp"
-                app:layout_constraintDimensionRatio="1:9"
-                app:layout_constraintEnd_toEndOf="@id/fragment_weather_current_weather_state_value_text_view"
-                app:layout_constraintStart_toStartOf="@id/fragment_weather_current_weather_state_value_text_view"
+                android:layout_marginEnd="6dp"
+                app:layout_constraintDimensionRatio="1:8"
+                app:layout_constraintEnd_toEndOf="@id/fragment_weather_current_possibility_rain_value_text_view"
+                app:layout_constraintStart_toStartOf="@id/fragment_weather_current_possibility_rain_value_text_view"
                 app:layout_constraintTop_toBottomOf="@id/fragment_weather_current_possibility_rain_value_text_view"
                 app:progressView_animation="accelerateDecelerate"
                 app:progressView_autoAnimate="true"
@@ -211,6 +213,8 @@
                 app:progressView_min="0"
                 app:progressView_orientation="vertical"
                 app:progressView_padding="1dp"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 app:progressView_progressFromPrevious="true"
                 app:progressView_radius="12dp" />
 
@@ -218,6 +222,8 @@
                 android:id="@+id/fragment_weather_is_it_good_to_go_outside_layout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 android:layout_marginStart="25dp"
                 android:background="@drawable/good_to_go_outside_background"
                 app:layout_constraintBottom_toBottomOf="@id/fragment_weather_humidity_progress_view"
@@ -230,8 +236,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_bold"
                     android:text="오늘은 산책가기 좋은날이에요!"
-                    android:textSize="16sp"
                     android:textColor="@color/white"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
