feat: 소셜 로그인 bottom sheet dialog 설정

--- a/app/src/main/res/drawable/recommend_style_background.xml
+++ b/app/src/main/res/drawable/recommend_style_background.xml
@@ -6,8 +6,8 @@
             <gradient
                 android:type="linear"
                 android:angle="90"
-                android:endColor="#e99c78"
-                android:startColor="#df7877" />
+                android:endColor="#ADD8E6"
+                android:startColor="#53B7CF" />
             <corners android:radius="12dp"/>
         </shape>
     </item>
