--- a/app/src/main/res/layout/login_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/login_bottom_sheet_dialog.xml
@@ -4,19 +4,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/login_bottom_sheet_dialog_main_text_image_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/walku_main_text"
+        android:tint="@color/main_green_base"
+        app:layout_constraintDimensionRatio="7:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/login_bottom_sheet_dialog_main_title_description_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="내가 찾는 산책로\n내가 찾는 등산로"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/login_bottom_sheet_dialog_main_text_image_view"
+        app:layout_constraintStart_toStartOf="@id/login_bottom_sheet_dialog_main_text_image_view"
+        app:layout_constraintTop_toBottomOf="@id/login_bottom_sheet_dialog_main_text_image_view" />
+
+    <TextView
+        android:id="@+id/login_bottom_sheet_dialog_main_title_description_sub_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="워쿠를 통해 바쁜 일상 힐링하세요!"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/login_bottom_sheet_dialog_main_title_description_text_view"
+        app:layout_constraintStart_toStartOf="@id/login_bottom_sheet_dialog_main_title_description_text_view"
+        app:layout_constraintTop_toBottomOf="@id/login_bottom_sheet_dialog_main_title_description_text_view" />
+
+
     <LinearLayout
         android:id="@+id/login_bottom_sheet_dialog_google_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/social_login_background"
         android:orientation="horizontal"
         app:layout_constraintDimensionRatio="6.5:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/login_bottom_sheet_dialog_main_title_description_sub_text_view">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/login_bottom_sheet_dialog_google_image"
