--- a/app/src/main/res/layout/fragment_map_item.xml
+++ b/app/src/main/res/layout/fragment_map_item.xml
@@ -18,6 +18,7 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fragment_map_image_view"
+            android:transitionName="background_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
