--- a/app/src/main/res/layout/fragment_challenge_mychallenge.xml
+++ b/app/src/main/res/layout/fragment_challenge_mychallenge.xml
@@ -3,28 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ProgressBar
-            android:id="@+id/loadingbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateTint="@color/black"/>
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1.2"
+        android:layout_weight="1.5"
         android:entries="@array/challenge_sortingarray"/>
     <TextView
         android:id="@+id/testtext"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.8" />
+        android:layout_weight="0.5" />
     <TextView
         android:id="@+id/counttext"
         android:layout_width="0dp"
