챌린지 spinner 리스트 정렬기능 추가 (+챌린지 리스트 searching 기능 미약하게 구현)

--- a/app/src/main/res/layout/fragment_challenge_mychallenge.xml
+++ b/app/src/main/res/layout/fragment_challenge_mychallenge.xml
@@ -16,11 +16,12 @@
         android:layout_height="match_parent"
         android:layout_weight="1.5"
         android:entries="@array/challenge_sortingarray"/>
-    <TextView
-        android:id="@+id/testtext"
+    <AutoCompleteTextView
+        android:id="@+id/searchwindow"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.5" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/counttext"
         android:layout_width="0dp"
