--- a/app/src/main/res/values/challengespinner.xml
+++ b/app/src/main/res/values/challengespinner.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="challenge_sortingarray">
+        <item>일반 순서 </item>
         <item>시작 날짜 순 </item>
         <item>남은 시간 순 </item>
         <item>달성도 순 </item>
