--- a/app/src/main/res/layout/fragment_challenge_myrecycler.xml
+++ b/app/src/main/res/layout/fragment_challenge_myrecycler.xml
@@ -11,26 +11,40 @@
             android:layout_height="match_parent"
             android:layout_weight="8"
             android:orientation="vertical"
-            android:layout_marginEnd="10dp">
+            android:layout_marginEnd="5dp">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_height="match_parent"
+               android:orientation="vertical"
+               android:layout_weight="8">
+            <TextView
+                android:id="@+id/startdaytextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="15"
+                android:textSize="11sp"/>
             <TextView
                 android:id="@+id/textview"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:ems ="30"
+                android:ems ="10"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
+                </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_weight="2">
                 <TextView
                     android:id="@+id/daytextview"
                     android:layout_width="40dp"
