feat: 정보 제공 안할시 문구 설정, 이미지 -> placeholder

--- a/app/src/main/res/layout/park_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/park_bottom_sheet_dialog.xml
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:ellipsize="end"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto_bold"
                 android:maxLines="1"
                 android:textColor="@color/medium_gray"
                 android:textSize="13sp"
