--- a/app/src/main/res/layout/activity_bike_map.xml
+++ b/app/src/main/res/layout/activity_bike_map.xml
@@ -3,4 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.naver.maps.map.MapView
+        android:id="@+id/activity_bike_map_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
